<resources>
    <string name="app_name">TestTask</string>

    <!--Task Display Menu Options-->
    <string name="action_settings">Settings</string>
    <string name="action_session">View Sessions</string>
    <string name="action_group">View Groups</string>
    <string name="action_event">View Events</string>
    <string name="action_tasks">View Tasks</string>
    <string name="action_LongTerm">View Long Terms</string>

    <!--Task Viewer Menu Options-->
    <string name="action_complete">View Completed</string>
    <string name="action_sort_group">Sort By Group</string>
    <string name="action_sort_session">Sort By Session</string>
    <string name="action_sort_created">Sort By Create Date</string>
    <string name="action_sort_ascending">Sort Ascending</string>

    <!--Instance Detail Menu Options-->
    <string name="action_task_view">View Parent Task</string>
    <string name="action_delete">Delete Instance</string>


    <!--Activity Titles-->
    <string name="title_activity_viewer_session">Session List</string>
    <string name="title_activity_viewer_group">Group List</string>
    <string name="title_activity_viewer_task">Tasks List</string>
    <string name="title_activity_viewer_events">Event List</string>
    <string name="title_activity_viewer_long_term">Long Term List</string>
    <string name="title_activity_details_event">Event</string>
    <string name="title_activity_details_group">Group</string>
    <string name="title_activity_details_task">Task</string>
    <string name="title_activity_details_session">Session</string>
    <string name="title_activity_details_long_term">Long Term Task</string>
    <string name="title_activity_details_instance">Task Instance</string>

    <string name="OneOffSession">One off Session</string>
    <string name="TextBox_Task">Enter a Task</string>
    <string name="Button_NewSession">Add New Session</string>
    <string name="TextBox_SessionTitle">Enter a Session Title</string>
    <string name="Button_Confirm">Confirm</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="TextBox_Description">Add a Description</string>

    <string-array name="SessionArray">
        <item>No Session</item>
    </string-array>

    <string-array name="GroupArray">
        <item>No Group</item>
    </string-array>

    <string-array name="TimeRange">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string-array name="Starting">
        <item>Starting Today</item>
        <item>Starting at Next Occurrence</item>
        <item>Starting in two Occurrences</item>
        <item>Starting in three Occurrences</item>
    </string-array>

    <string-array name="RepetitionArray">
        <item>No Repetition</item>
        <item>Repetes Every </item>
        <item>Repetes Every Other</item>
        <item>Repetes Every Third</item>
        <item>Repetes Every Forth</item>
    </string-array>

    <string-array name="Session_RepetitionArray">
        <item>Repetes Every </item>
        <item>Repetes Every Other</item>
        <item>Repetes Every Third</item>
        <item>Repetes Every Forth</item>
    </string-array>

    <!--TimeKeeper-->
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>


    <string name="TimeKeeper_From_Time">From Time:</string>
    <string name="TimeKeeper_To_Time">To Time:</string>
    <string name="TimeKeeper_ToDate">To Date:</string>
    <string name="TimeKeeper_FromDate">From Date:</string>
    <string name="TimeKeeper_Month_Gen">General Dates</string>
    <string name="TimeKeeper_Month_Spec">Specific Days</string>
    <string name="TimeKeeper_Month_Gen_First">First of Month</string>
    <string name="TimeKeeper_Month_Gen_Middle">Middle of Month</string>
    <string name="TimeKeeper_Month_Gen_Last">Last of Month</string>
    <string name="TimeKeeper_Month_Gen_AfterWkn">After Weekend</string>
    <string name="TimeKeeper_Month_Spec_Add">Add Day</string>
    <string name="TimeKeeper_Month_To">To Date</string>
    <string name="TimeKeeper_Year_To">To Date</string>

    <!--Task Viewer-->
    <string name="Priority">Priority</string>
    <string name="Standard">Standard</string>
    <string name="Today">Today</string>

    <!--Event Viewer-->
    <string name="Active">Active</string>
    <string name="NotActive">NotActive</string>

    <!--Event Add-->
    <string name="EventAddTask">Add some tasks to your event</string>
    <string name="TextBox_Event">Enter an Event</string>

    <!--Event Menu Options-->
    <string name="action_delete_event">Delete Event</string>
    <string name="action_clear_event">Clear Event</string>

    <!--Long Term Viewer-->
    <string name="Uncomplete">Uncomplete</string>
    <string name="Complete">Complete</string>

    <!--Long Term Add-->
    <string name="LongTermAddTask">Associate some standard tasks to your long term tasks</string>
    <string name="TextBox_LongTerm">Enter a Long Term Task</string>

    <!--Long Term Menu Options-->
    <string name="action_delete_longterm">Delete Long Term</string>
    <string name="action_clear_longterm">Clear Long Term</string>

    <!--Group Add-->
    <string name="txtGroupAddReq">Associate some tasks to your group</string>
    <string name="TextBox_GroupTitle">Enter a Group Title</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <!-- Debug Settings -->
    <string name="pref_header_debug">Debug</string>
    <string name="pref_title_enable_debug">Enable Debug</string>
    <string name="pref_title_enable_Time">Enable Time</string>
    <string name="pref_description_enable_debug">Allows testing of various features</string>
    <string name="pref_description_enable_time">Allows debug of Time</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_EnableUpcoming">Enable Upcoming</string>
    <string name="pref_EnableUpcomingDesc">Allows tasks to display in upcoming queue earlier than intended for enhanced visibility</string>
    <string name="pref_UpcomingDay">Day Threshold</string>
    <string name="pref_UpcomingWeek">Week Threshold</string>
    <string name="pref_UpcomingMonth">Month Threshold</string>
    <string name="pref_UpcomingYear">Year Threshold</string>
    <string name="pref_UpcomingStd">Standard Threshold</string>

    <string name="pref_middle_month">Middle of Month</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="WAL_Checkpoint">Run WAL Checkpoint</string>
    <string name="Remove">-</string>
    <string name="Add">+</string>


</resources>
