<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.deviousindustries.testtask.TaskList">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:title="@string/action_settings"
        app:showAsAction="" />
    <item
        android:id="@+id/action_task"
        android:orderInCategory="100"
        android:title="@string/action_tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_session"
        android:orderInCategory="150"
        android:title="@string/action_session"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_event"
        android:orderInCategory="200"
        android:title="@string/action_event"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_group"
        android:orderInCategory="250"
        android:title="@string/action_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_longTerm"
        android:orderInCategory="250"
        android:title="@string/action_LongTerm"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new"
        android:orderInCategory="300"
        android:title="new"
        app:showAsAction="never" />
</menu>
