<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.deviousindustries.testtask.Viewer_Task">
    <item
        android:id="@+id/action_completed"
        android:orderInCategory="100"
        android:title="@string/action_complete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_created"
        android:orderInCategory="1"
        android:title="@string/action_sort_created"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_group"
        android:orderInCategory="2"
        android:title="@string/action_sort_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_session"
        android:orderInCategory="3"
        android:title="@string/action_sort_session"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_ascending"
        android:orderInCategory="4"
        android:title="@string/action_sort_ascending"
        app:showAsAction="never" />
</menu>