<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.deviousindustries.testtask.TimeKeeper">

    <Spinner
        android:id="@+id/Repetition_Spinner"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/RepetitionArray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/Timeframe_Spinner"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/TimeRange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Repetition_Spinner" />

    <Spinner
        android:id="@+id/Starting_Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Starting"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        app:layout_constraintTop_toBottomOf="@id/Timeframe_Spinner"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CLayNoFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Starting_Spinner">

        <Button
            android:id="@+id/FromDate_Add_Rmv_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TimeKeeper_FromDate"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/ToDate_Add_Rmv_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TimeKeeper_ToDate"
            app:layout_constraintTop_toBottomOf="@+id/FromDate_Add_Rmv_Button"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CLayWeekly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CLayNoFrequency">

            <CheckBox
                android:id="@+id/Friday_Checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Friday"
                app:layout_constraintLeft_toRightOf="@+id/Tuesday_Checkbox"
                app:layout_constraintTop_toBottomOf="@+id/Thursday_Checkbox" />

            <CheckBox
                android:id="@+id/Tuesday_Checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tuesday"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Monday_Checkbox" />

            <CheckBox
                android:id="@+id/Monday_Checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Monday"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <CheckBox
                android:id="@+id/Sunday_Checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sunday"
                app:layout_constraintLeft_toRightOf="@+id/Thursday_Checkbox"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/Thursday_Checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Thursday"
                app:layout_constraintLeft_toRightOf="@+id/Monday_Checkbox"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/Saturday_Checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Saturday"
                app:layout_constraintLeft_toRightOf="@+id/Wednesday_Checkbox"
                app:layout_constraintTop_toBottomOf="@+id/Friday_Checkbox" />

            <CheckBox
                android:id="@+id/Wednesday_Checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Wednesday"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Tuesday_Checkbox" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CLayMonthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CLayWeekly">

        <RadioGroup
            android:id="@+id/TimeKeeper_Monthly_RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/General_Monthly_Radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TimeKeeper_Month_Gen"
                app:layout_constraintBottom_toTopOf="@+id/First_Month_Checkbox" />

            <RadioButton
                android:id="@+id/Specific_Montly_Radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TimeKeeper_Month_Spec"
                app:layout_constraintTop_toBottomOf="@+id/Last_Month_Checkbox" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/First_Month_Checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TimeKeeper_Month_Gen_First"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toRightOf="@id/TimeKeeper_Monthly_RadioGroup"
            app:layout_constraintTop_toTopOf="parent"/>

        <CheckBox
            android:id="@+id/Middle_Month_Checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TimeKeeper_Month_Gen_Middle"
            app:layout_constraintStart_toStartOf="@+id/First_Month_Checkbox"
            app:layout_constraintTop_toBottomOf="@+id/First_Month_Checkbox" />

        <CheckBox
            android:id="@+id/Last_Month_Checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TimeKeeper_Month_Gen_Last"
            app:layout_constraintStart_toStartOf="@+id/First_Month_Checkbox"
            app:layout_constraintTop_toBottomOf="@+id/Middle_Month_Checkbox" />

        <CheckBox
            android:id="@+id/After_Week_Checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TimeKeeper_Month_Gen_AfterWkn"
            app:layout_constraintStart_toStartOf="@+id/First_Month_Checkbox"
            app:layout_constraintTop_toBottomOf="@+id/Last_Month_Checkbox" />

        <Button
            android:id="@+id/Specific_Add_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TimeKeeper_Month_Spec_Add"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toRightOf="@+id/TimeKeeper_Monthly_RadioGroup"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/Specific_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            app:layout_constraintLeft_toLeftOf="@+id/Specific_Add_Button"
            app:layout_constraintTop_toBottomOf="@id/Specific_Add_Button" android:inputType=""  />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/FromTime_Add_Rmv_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimeKeeper_From_Time"
        app:layout_constraintTop_toBottomOf="@+id/CLayMonthly" />

    <Button
        android:id="@+id/ToTime_Add_Rmv_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimeKeeper_To_Time"
        app:layout_constraintTop_toBottomOf="@+id/FromTime_Add_Rmv_Button" />

    <CheckBox
        android:id="@+id/Thru_CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Days Thru"
        app:layout_constraintTop_toBottomOf="@id/ToTime_Add_Rmv_Button"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>
