<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Task_LongTerm"
    tools:showIn="@layout/activity_task_long_term"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txbLongTermTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TextBox_LongTerm"
        android:selectAllOnFocus="false"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="153dp" />

    <EditText
        android:id="@+id/txbLongTermDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TextBox_Description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txbLongTermTitle" />

    <TextView
            android:id="@+id/txtLongTermAddReq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LongTermAddTask"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txbLongTermDesc" />

    <TextView
        android:id="@+id/txtLongTermUnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Uncomplete" />

    <ListView
        android:id="@+id/lsvLongTermTaskListUnc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/txbLongTermDesc"/>

    <TextView
        android:id="@+id/txtLongTermCmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Complete" />

    <ListView
        android:id="@+id/lsvLongTermTaskListCmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/lsvLongTermTaskListUnc"/>


    <Button
        android:id="@+id/btnLongTermConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="CreateTask"
        android:layout_gravity="left"
        android:text="@string/Button_Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</LinearLayout>